# hc-re

./: CMakeLists.txt  README.md  cmake_test_discovery_fefcf2f14f.json  conanfile.py
apps/cli/: main.cpp
docs/: design.md
include/hc/: archive.h  assignment.h  xdg-basedir.h
src/: archive.cpp
tests/: CMakeLists.txt  server-test.cpp
